--- a/index.html
+++ b/index.html
@@ -55,21 +55,21 @@
             </section>
 
             <section id = "my-work">
-                <a href="https://github.com/TVOJ-UCET/graficky-editor" target="_blank" class="project-card">
+                <a href="https://github.com/StepanOrsag/GrafickyVektorovyEditor.git" target="_blank" class="project-card">
                     <img src="Work/GraEdi.png" alt="Grafický vektorový editor" class="project-image">
                      <div class="project-overlay">
                         <h3>Grafický vektorový editor</h3>
                     </div>
                 </a>
 
-                <a href="https://github.com/TVOJ-UCET/stag-rozvrh" target="_blank" class="project-card">
+                <a href="https://github.com/StepanOrsag/Rozvrh.git" target="_blank" class="project-card">
                     <img src="Work/Rozvrh.png" alt="Rozvrh STAG" class="project-image">
                     <div class="project-overlay">
                         <h3>Stag schedule</h3>
                     </div>
                 </a>
 
-                <a href="https://github.com/TVOJ-UCET/web-projekce" target="_blank" class="project-card">
+                <a href="https://github.com/StepanOrsag/tnpw-projekt.git" target="_blank" class="project-card">
                     <img src="Work/Web.png" alt="Web pro Stavební Projekce s.r.o." class="project-image">
                     <div class="project-overlay">
                         <h3>Website for Stavební Projekce s.r.o.</h3>
